[gd_scene load_steps=4 format=3 uid="uid://dybjpoyfvgi3a"]

[ext_resource type="Script" path="res://src/scenes/option/OptionScene.gd" id="1_x0kjo"]
[ext_resource type="LabelSettings" uid="uid://ocau00etiel2" path="res://assets/fonts/font_result.tres" id="2_2vdb2"]
[ext_resource type="Theme" uid="uid://cjqdw4nibxjst" path="res://assets/fonts/ui_48.tres" id="3_6bq6d"]

[node name="OptionScene" type="Node2D"]
script = ExtResource("1_x0kjo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 48.0
offset_right = 1280.0
offset_bottom = 568.0
color = Color(1, 1, 1, 0.0823529)

[node name="BGM" type="Node2D" parent="."]
position = Vector2(112, 72)

[node name="Label" type="Label" parent="BGM"]
offset_right = 72.0
offset_bottom = 57.0
text = "BGM"
label_settings = ExtResource("2_2vdb2")
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="BGM"]
offset_left = 96.0
offset_top = 16.0
offset_right = 564.0
offset_bottom = 32.0
max_value = 1.0
step = 0.01
value = 1.0
metadata/_edit_lock_ = true

[node name="SE" type="Node2D" parent="."]
position = Vector2(112, 168)

[node name="Label" type="Label" parent="SE"]
offset_right = 72.0
offset_bottom = 57.0
text = "SE"
label_settings = ExtResource("2_2vdb2")
metadata/_edit_lock_ = true

[node name="HSlider" type="HSlider" parent="SE"]
offset_left = 96.0
offset_top = 16.0
offset_right = 564.0
offset_bottom = 32.0
max_value = 1.0
step = 0.01
value = 1.0
metadata/_edit_lock_ = true

[node name="CheckOpeningEnding" type="CheckButton" parent="."]
offset_left = 104.0
offset_top = 256.0
offset_right = 768.0
offset_bottom = 312.0
theme = ExtResource("3_6bq6d")
theme_override_font_sizes/font_size = 32
text = "オープニング・エンディングのスキップ"

[node name="CheckRetry" type="CheckButton" parent="."]
offset_left = 104.0
offset_top = 328.0
offset_right = 768.0
offset_bottom = 384.0
theme = ExtResource("3_6bq6d")
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "Rキーでクイックリトライ"

[node name="CheckItemWindow" type="CheckButton" parent="."]
offset_left = 104.0
offset_top = 392.0
offset_right = 768.0
offset_bottom = 448.0
theme = ExtResource("3_6bq6d")
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "アイテムウィンドウを表示する"

[node name="CheckLunkerSupport" type="CheckButton" parent="."]
offset_left = 104.0
offset_top = 464.0
offset_right = 760.0
offset_bottom = 544.0
theme = ExtResource("3_6bq6d")
theme_override_font_sizes/font_size = 32
text = "ランカーモード補助線
 (ONにすると実績が開放できません)"

[node name="ButtonBack" type="Button" parent="."]
offset_left = 480.0
offset_top = 832.0
offset_right = 800.0
offset_bottom = 893.0
theme = ExtResource("3_6bq6d")
text = "Back to Title"

[connection signal="value_changed" from="BGM/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="SE/HSlider" to="." method="_on_h_slider2_value_changed"]
[connection signal="toggled" from="CheckOpeningEnding" to="." method="_on_check_opening_ending_toggled"]
[connection signal="toggled" from="CheckRetry" to="." method="_on_check_retry_toggled"]
[connection signal="toggled" from="CheckItemWindow" to="." method="_on_check_item_window_toggled"]
[connection signal="toggled" from="CheckLunkerSupport" to="." method="_on_check_lunker_support_toggled"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
